fixed scrollbar for firefox browser

--- a/deafio-dia-do-rock/src/index.css
+++ b/deafio-dia-do-rock/src/index.css
@@ -5,7 +5,7 @@
 
 .dark {
     --scrollbar-track: #131219;
-    --scrollbar-thumb: #27262F;
+    --scrollbar-thumb: #3f3e4b;
 }
 
 @tailwind base;
@@ -15,6 +15,11 @@
 .leaflet-container {
   width: 100%;
   height: 100%;
+}
+
+* {
+    scrollbar-color: var(--scrollbar-thumb) var(--scrollbar-track);
+    scrollbar-width: thin;
 }
 
 *::-webkit-scrollbar {
